final/10-syncthing-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: syncthing-sts
  labels:
    run: syncthing-sts
spec:
  selector:
    matchLabels:
      run: syncthing-sts
  serviceName: "syncthing-sts"
  template:
    metadata:
      generateName: syncthing-sts
      labels:
        run: syncthing-sts
    spec:
      containers:
        - name: syncthing-sts
          image: linuxserver/syncthing
          imagePullPolicy: Always
          ports:
            - containerPort: 8384
          volumeMounts:
            - mountPath: "/config"
              name: rsync-data
  volumeClaimTemplates:
   - metadata:
       name: rsync-data
     spec:
       accessModes: [ "ReadWriteOnce" ]
       #storageClassName: "openebs-standalone"
       resources:
         requests:
           storage: 1Gi
