final/41-oauth2-proxy-example-google.yaml
## This is test deployment for Kubernetes platforms.
## This is _not_ intended to be use in producction.
##
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
      - image: bitnami/oauth2-proxy
        name: oauth2-proxy
        args:
        - --email-domain=*
          #        - --cookie-secure=false
        - --provider=google
        - --whitelist-domain=".um.edu.ar"
          #- --redirect-url=https://syncthing.carlostaffe.kube.um.edu.ar/auth2/callback
        - --http-address=0.0.0.0:4180
          #- --cookie-secret=JfBnh-Njot-J5tfdJ9V0sw==
          #- --client-secret=cuOTfvDOOQfpr7strUOJfbCh
          #- --client-id=1087886107719-04855ehlnofcku1h0rtuqlsva5p0k2to.apps.googleusercontent.com
      volumes:
      - name: secret-volume
        secret:
          secretName: oauth2-proxy-secrets
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
spec:
  ports:
  - port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    app: oauth2-proxy
  type: ClusterIP
