final/30-syncthing-ingress.yaml
apiVersion: v1
kind: List
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
    name: syncthing-sts
  spec:
    rules:
    - host: syncthing.carlostaffe.kube.um.edu.ar
      http:
        paths:
        - backend:
            serviceName: syncthing-sts
            servicePort: 8384
          path: /
